# groceries

./: .gitignore  README.md  package.json
client/: index.android.js  index.ios.js  package.json
client/android/: settings.gradle
client/android/app/: BUCK  build.gradle
client/app/: index.js
client/app/actions/: grocery.js  nav.js  token.js  types.js  ui.js  user.js
client/app/components/: List.js  ListCreateForm.js  ListHeader.js  ListItem.js  ListItemCreateForm.js  ListTouchableText.js  LoginForm.js  SidemenuFooterTouchableText.js  SidemenuList.js
client/app/reducers/: index.js  utility.js
client/app/scenes/: drawer.js  login.js  menu.js
client/app/store/: index.js
client/app/utils/: connectProps.js
client/ios/groceries/: AppDelegate.m
client/ios/groceries.xcodeproj/: project.pbxproj
client/ios/groceriesTests/: groceriesTests.m
server/: .gitignore  Cargo.toml  Main.go
server/models/: User.go  UserClaims.go
server/server/: Config.go  Handlers.go  JWT.go  Middleware.go  Router.go  Routes.go  Utils.go
server/src/: lib.rs  main.rs
server/src/server/: errors.rs  handlers.rs  mod.rs  router.rs  traits.rs  types.rs
server/src/server/controllers/: mod.rs  traits.rs  user.rs  users.rs
server/src/server/handlers/: auth.rs  list.rs  mod.rs  traits.rs  user.rs  utils.rs
server/src/server/models/: errors.rs  mod.rs  structs.rs  traits.rs  utils.rs
server/src/server/router/: authentication.rs  lists.rs  mod.rs  user.rs  users.rs
server/src/server/utils/: traits.rs
server/store/: Session.go  Store.go  UserActions.go
(+30 files in other folders)
